cabal-version:      3.0
name:               simpletracer
version:            0.1.0.0
synopsis:           a simple function call tracer in Haskell
-- description:
homepage:           https://github.com/LitFill/tracer.git
license:            MIT
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wextra

executable simpletracer
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , fmt
    hs-source-dirs:   app
    default-language: GHC2024
